fixes label alignment bug

--- a/src/sass/grid.sass
+++ b/src/sass/grid.sass
@@ -26,60 +26,11 @@ body
       img
         margin-top: -50px
 
-
   .content
     background: #fcfcfc
     padding: 15px
     border-radius: 5px
     margin-bottom: 20px
-
-  .tiles
-    column-count: 3
-    column-gap: 10px
-    .ui.card
-      display: inline-block
-      box-shadow: none
-      margin: 0 0 1em
-      width: 100%
-      .extra.content
-        padding: 5px 15px
-      .label.bookmark
-        position: absolute
-        z-index: 2
-        font-size: 20px
-        top: 4px
-        left: 4px
-
-      &.offer:before,
-      &.clearance:before,
-      &.popular:before,
-      &.new:before
-        position: absolute
-        background: green
-        content: "Offer"
-        z-index: 2
-        color: white
-        text-transform: uppercase
-        letter-spacing: 0.15em
-        padding: 3px 8px
-        font-size: 10px
-
-      &.offer:before
-        background: yellow
-        color: black
-        content: "Offer"
-
-      &.clearance:before
-        background: green
-        content: "Clearance"
-
-      &.popular:before
-        background: red
-        content: "Popular"
-
-      &.new:before
-        background: blue
-        content: "New"
 
   // desktop
   .brand
